--- a/client/src/components/SearchProduct/searchProduct.scss
+++ b/client/src/components/SearchProduct/searchProduct.scss
@@ -89,7 +89,8 @@
                     align-items: center;
 
                     >img {
-                        max-height: 3.5rem;
+                        max-width: 100%;
+                        max-width: 100%;
                     }
 
                 }
