--- a/client/src/Pages/ProductDetails/productDetails.scss
+++ b/client/src/Pages/ProductDetails/productDetails.scss
@@ -35,16 +35,23 @@
                     // border: 2px solid red;
                     width: 80%;
                     height: 30rem;
-                    display: grid;
-                    place-content: center;
                     box-shadow: 0px 0px 5px gray;
                     padding: 10px;
                     overflow: hidden;
 
-                    >img {
-                        // border: 2px solid green;
-                        width: 100%;
+                    >div {
+                        height: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+
+                        >img {
+                            // border: 2px solid green;
+                            max-width: 100%;
+                            max-height: 100%;
+                        }
                     }
+
                 }
 
             }
@@ -85,7 +92,8 @@
 
 
                         >img {
-                            width: 4.5rem;
+                            max-width: 100%;
+                            max-height: 100%;
                         }
 
                         &:hover {
@@ -144,30 +152,32 @@
             >.QtyAndATB {
                 // border: 2px solid green;
                 display: flex;
+                cursor: pointer;
 
                 >.productQty {
                     // border: 2px solid red;
-                    width: 7rem;
+                    width: fit-content;
                     height: 2.5rem;
                     display: flex;
+                    align-items: center;
+                    font-family: 'roboto';
                     justify-content: space-between;
                     border: 1px solid gray;
-                    cursor: pointer;
 
-                    >span {
-                        // border: 2px solid green;
-                        padding: 0% 9%;
-                        padding-left: .7rem;
-                        font-size: medium;
-                        font-family: 'roboto';
-                        display: flex;
-                        align-items: center;
+
+                    >button {
+                        width: 3rem;
+                        font-size: large;
+                        border: none;
+                        background-color: transparent;
+                        height: 100%;
+                        cursor: pointer;
+
 
                         &:hover {
                             background-color: black;
                             color: white;
                             transition: .3s all;
-
 
                         }
 
@@ -178,11 +188,10 @@
                         padding: 5% 10%;
                         font-size: medium;
 
+
                         &:hover {
                             background-color: white;
                             color: black;
-
-
                         }
 
                     }
@@ -191,26 +200,34 @@
 
                 >.AddtoBag {
                     // border: 2px solid purple;
-                    display: grid;
-                    place-content: center;
-                    padding: 0 2rem;
-                    color: white;
-                    background-color: black;
-                    font-family: 'roboto';
-                    font-size: small;
-                    font-weight: bold;
-                    word-spacing: 8px;
-                    letter-spacing: 2px;
-                    margin-left: 20px;
-                    border: 2px solid transparent;
 
 
-                    &:hover {
-                        border: 2px solid black;
-                        background-color: white;
-                        color: black;
-                        transition: .5s all;
+                    >button {
+                        color: white;
+                        background-color: black;
+                        font-family: 'roboto';
+                        font-size: small;
+                        font-weight: bold;
+                        word-spacing: 8px;
+                        letter-spacing: 2px;
+                        padding: .5rem 1.5rem;
+                        height: 2.5rem;
+                        border: 2px solid transparent;
+                        margin-left: 2rem;
+                        cursor: pointer;
+
+                        &:hover {
+                            border: 2px solid black;
+                            background-color: white;
+                            color: black;
+                            transition: .5s all;
+                        }
+
+
                     }
+
+
+
 
                 }
             }
@@ -224,6 +241,7 @@
                 font-size: small;
                 font-weight: bold;
                 padding: .75rem 0rem;
+                cursor: pointer;
 
                 >span {
                     // border: 2px solid black;
@@ -344,13 +362,24 @@
 
             >.MoreInforamtionInfoHeading {
                 // border: 2px solid red;
-                min-width: 10%;
-                max-width: 30%;
+
+                >div {
+                    // border: 2px solid green;
+                    display: flex;
+                    padding: 1rem;
 
 
-                >p {
-                    // border: 2px solid purple;
-                    padding: .5rem 0rem;
+                    >p {
+                        // border: 2px solid blue;
+                        width: 6rem;
+                        line-height: 1.5rem;
+                    }
+
+                    >p:nth-child(2) {
+                        // border: 2px solid purple;
+                        width: 50%;
+                        font-weight: normal;
+                    }
                 }
 
 
