--- a/client/src/Pages/Products/Products.scss
+++ b/client/src/Pages/Products/Products.scss
@@ -5,7 +5,8 @@
     width: 80%;
     margin: auto;
     height: 90vh;
-    margin-bottom: 10rem;
+    // margin-bottom: 10rem;
+    overflow: hidden;
 
 
     >.left {
@@ -20,7 +21,6 @@
             font-weight: bold;
             padding: .5rem;
             border-right: 1px solid gray;
-
         }
 
         >.productList {
@@ -36,20 +36,27 @@
                 font-weight: 600;
                 font-size: small;
                 padding: 1rem 1rem 0rem 1rem;
+                // border: 2px solid green;
 
                 >dt {
                     color: black;
                     font-size: medium;
+                    cursor: pointer;
 
                 }
 
                 >dd {
                     // display: none;
                     padding: .3rem 1rem;
+                    transition: .2s all;
+                    cursor: pointer;
 
                     &:hover {
                         color: black;
                         font-size: medium;
+                        transform: scaleY(1.1);
+                        transition: .2s all;
+
 
                     }
                 }
@@ -73,7 +80,8 @@
 
                         &:hover {
                             color: black;
-                            font-size: medium;
+                            // font-size: medium;
+                            transform: scaleY(1.1);
 
                         }
                     }
@@ -84,9 +92,7 @@
             &::-webkit-scrollbar {
                 display: none;
             }
-
         }
-
     }
 
     >.right {
@@ -152,20 +158,24 @@
                 // border: 2px solid red;
                 padding: .5rem;
                 margin: .7rem;
-                height: fit-content;
+                height: 21rem;
                 text-decoration: none;
 
 
+
                 >.productPhoto {
-                    // border: 2px solid blue;
                     overflow: hidden;
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     border: 1px solid rgba(0, 0, 0, 0.335);
+                    height: 80%;
+                    // border: 2px solid blue;
 
                     >img {
-                        width: 100%;
+                        max-width: 100%;
+                        max-height: 100%;
+
                     }
                 }
 
