--- a/client/src/components/Banner/banner.scss
+++ b/client/src/components/Banner/banner.scss
@@ -44,7 +44,7 @@
             // border: 2px solid red;
             width: 48%;
             height: 23rem;
-            background-image: url('../../../public/add1.jpg');
+            // background-image: url('../../../public/add1.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             color: white;
