--- a/client/src/components/PopularProducts/popularProducts.scss
+++ b/client/src/components/PopularProducts/popularProducts.scss
@@ -14,17 +14,17 @@
     }
 
     >.arrivalsProducts {
-        // border: 2px solid red;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        // border: 2px solid green;
+        display: flex;
+        justify-content: center;
         padding: 30px 0px;
-        gap: 20px 0px;
+        gap: 25px;
         place-items: center;
 
         >.arrivalProduct {
             text-decoration: none;
             // border: 2px solid blue;
-            width: 85%;
+            width: 17vw;
             height: 20rem;
 
             &:hover {
@@ -42,7 +42,7 @@
                 // border: 2px solid green;
                 width: 100%;
                 height: 15rem;
-                background-image: url('../../../public/Ap.jpg');
+                // background-image: url('../../../public/Ap.jpg');
                 background-size: cover;
                 background-position: center;
                 display: flex;
