--- a/client/src/components/ProfileWishlist/profileWishlist.scss
+++ b/client/src/components/ProfileWishlist/profileWishlist.scss
@@ -29,16 +29,18 @@
                 box-shadow: 0px 0px 12px gray;
                 transform: scale(1.07);
                 transition: .7s all;
-                color: orangered;
             }
 
 
-            >div:nth-child(1) {
+            >a:nth-child(1) {
                 border: 2px solid red;
                 width: 11rem;
                 height: 11rem;
                 border: 1px solid rgb(160, 160, 160);
 
+                display: flex;
+                align-items: center;
+                justify-content: center;
 
                 >img {
                     max-width: 100%;
