--- a/client/src/Pages/Cart/cart.scss
+++ b/client/src/Pages/Cart/cart.scss
@@ -41,7 +41,7 @@
 
             from {
                 right: 100%;
-                display: 0%;
+                // display: 0%;
             }
 
         }
@@ -102,7 +102,6 @@
 
         >.cartList {
             // border: 2px solid green;
-            // min-height: 41rem;
             height: 80vh;
             overflow: scroll;
 
@@ -146,26 +145,36 @@
                     // border: 2px solid blue;
                     font-family: 'roboto';
                     width: 60%;
-                    height: 5.5rem;
-                    font-weight: bold;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
-                    // padding: .7rem .5rem;
+                    display: grid;
+                    gap: 1rem;
 
-                    >span {
-                        color: orangered;
 
+                    >.descPrice {
+                        // border: 2px solid green;
+                        font-weight: bold;
+                        font-size: large;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: flex-start;
+                        gap: 10px;
+
+                        >span {
+                            color: orangered;
+
+                        }
                     }
 
-                    >div {
+
+
+
+                    >.Btns {
                         // border: 2px solid green;
                         display: flex;
                         align-items: center;
                         font-size: small;
                         // margin-top: 1rem;
 
-                        gap: 12px;
+                        gap: 15px;
 
                         >span {
                             // border: 2px solid red;
