--- a/client/src/Pages/ContactUs/contactUs.scss
+++ b/client/src/Pages/ContactUs/contactUs.scss
@@ -127,6 +127,7 @@
 
                 >textarea {
                     // border: 1px solid black;
+                    padding: .5rem;
 
                     &:focus {
                         outline: none;
