--- a/client/src/Pages/WishList/wishList.scss
+++ b/client/src/Pages/WishList/wishList.scss
@@ -2,16 +2,17 @@
     // border: 2px solid blue;
     width: 80%;
     margin: auto;
-    height: max-content;
     font-family: 'roboto';
-    margin-bottom: 10rem;
+    height: 100vh;
+    overflow: hidden;
 
 
 
-    >h2 {
+    >.wishListHeader {
         // border: 2px solid green;
         font-weight: bolder;
         padding: 1.5rem 1rem;
+        height: 10%;
         border-bottom: 1px solid rgba(128, 128, 128, 0.217);
 
 
@@ -20,9 +21,11 @@
     >.itemsList {
         // border: 2px solid red;
         width: 100%;
-        height: 80vh;
         margin: auto;
         overflow: scroll;
+        height: 90vh;
+        padding-bottom: 1.5rem;
+        scroll-behavior: smooth;
 
 
         &::-webkit-scrollbar {
@@ -72,8 +75,9 @@
                 flex-direction: column;
                 justify-content: space-between;
                 width: 34rem;
+                text-decoration: none;
+                color: black;
 
-                // padding: 0rem 1rem;
 
 
                 >p {
@@ -100,6 +104,8 @@
                     color: gray;
                     letter-spacing: 1px;
                     line-height: 20px;
+                    height: 45%;
+                    overflow: hidden;
                 }
             }
 
@@ -110,6 +116,7 @@
                 align-items: center;
                 justify-content: space-between;
                 gap: 12px;
+                cursor: pointer;
 
                 >p {
                     display: flex;
