--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -6,7 +6,8 @@
   width: 35%;
   background-color: #333;
   color: #fff;
-  transition: width 0.3s ease; /* Add a transition property for width */
+  transition: width 0.3s ease;
+  /* Add a transition property for width */
 }
 
 .sidebar.open {
@@ -19,11 +20,13 @@
   background-color: #555;
   text-align: center;
   font-size: 20px;
-  transition: margin-left 0.3s ease; /* Add a transition property for margin-left */
+  transition: margin-left 0.3s ease;
+  /* Add a transition property for margin-left */
 }
 
 .sidebar.open .toggle-btn {
-  margin-left: 35%; /* Adjust the margin to match the sidebar width */
+  margin-left: 35%;
+  /* Adjust the margin to match the sidebar width */
 }
 
 .options {
