--- a/client/src/Pages/Products/Products.scss
+++ b/client/src/Pages/Products/Products.scss
@@ -115,6 +115,7 @@
             >form {
                 // border: 2px solid green;
                 display: flex;
+                align-items: center;
 
                 >input {
                     padding: .4rem 1rem;
@@ -124,6 +125,22 @@
                     &:focus {
                         outline: none;
                     }
+                }
+
+                >span {
+                    font-size: large;
+                    position: absolute;
+                    right: 13.2%;
+                    transition: .4s all;
+
+                    &:hover {
+                        color: red;
+                        transform: scale(1.1);
+                        transition: .4s all;
+                        cursor: pointer;
+
+                    }
+
                 }
 
                 >button {
@@ -146,6 +163,7 @@
         >.products {
 
 
+
             // border: 2px solid green;
             padding: 1rem;
             height: 90%;
@@ -153,6 +171,21 @@
             grid-template-columns: repeat(3, 1fr);
             overflow: scroll;
 
+            >.pNotFound {
+                // border: 2px solid red;
+                font-size: x-small;
+                color: rgba(78, 78, 78, 0.449);
+                width: max-content;
+                height: max-content;
+                font-weight: 100;
+                font-family: 'Open Sans', sans-serif;
+                position: relative;
+                left: 22rem;
+                top: 12rem;
+
+
+
+            }
 
             >.productWindow {
                 // border: 2px solid red;
