--- a/client/src/components/UserProfile/userProfile.scss
+++ b/client/src/components/UserProfile/userProfile.scss
@@ -7,20 +7,7 @@
     align-items: center;
     gap: 2rem;
     margin: 7rem 0rem 7rem 0rem;
-    
 
-    >.userPhoto {
-        // border: 2px solid blue;
-        width: 7rem;
-        height: 7rem;
-        overflow: hidden;
-        border-radius: 100vw;
-        box-shadow: 0px 15px 20px rgba(128, 128, 128, 0.213);
-
-        >img {
-            width: 100%;
-        }
-    }
 
     >.userDetails {
         // border: 2px solid red;
@@ -28,6 +15,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 2rem;
+        // margin-top: 2rem;
 
         >div {
             width: 100%;
