--- a/client/src/Pages/Order/order.scss
+++ b/client/src/Pages/Order/order.scss
@@ -98,7 +98,7 @@
                 >.cartHeader {
                     // border: 2px solid green;
                     display: grid;
-                    grid-template-columns: 5fr 1.5fr 1.5fr 1fr;
+                    grid-template-columns: 3.5fr 1fr 1.5fr 1.5fr 1fr;
                     text-align: center;
 
 
@@ -123,7 +123,7 @@
                     >.productDetails {
                         // border: 2px solid red;
                         display: grid;
-                        grid-template-columns: 5fr 1.5fr 1.5fr 1fr;
+                        grid-template-columns: 3.5fr 1fr 1.5fr 1.5fr 1fr;
                         height: fit-content;
                         font-family: 'Archivo', sans-serif;
 
@@ -142,9 +142,11 @@
                             >.img {
                                 // border: 2px solid green;
                                 width: 10rem;
+                                min-width: 10rem;
                                 height: 6rem;
                                 display: flex;
                                 align-items: center;
+                                justify-content: center;
                                 border: 1px solid gray;
 
 
@@ -177,10 +179,20 @@
                                     font-weight: bold;
                                     color: gray;
                                     font-size: small;
+
                                 }
 
                             }
 
+
+                        }
+
+                        >.productPrice {
+                            // border :2px solid red;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            font-size: large;
 
                         }
 
