--- a/client/src/components/ProfileCart/profileCart.scss
+++ b/client/src/components/ProfileCart/profileCart.scss
@@ -25,7 +25,7 @@
 
 
             >.photo {
-                border: 2px solid purple;
+                // border: 2px solid purple;
                 width: 15rem;
                 height: 10rem;
                 border: 1px solid gray;
@@ -42,7 +42,7 @@
 
             >.itemDetails {
                 // border: 2px solid green;
-                // display: flex;
+                width: 80%;
 
                 >a {
 
@@ -95,6 +95,7 @@
                         background-color: transparent;
                         margin-right: 1rem;
 
+
                         &:hover {
                             color: orangered;
                         }
@@ -123,6 +124,7 @@
                         background-color: transparent;
                         border: none;
                         font-size: large;
+                        cursor: pointer;
 
                         &:hover {
                             background-color: black;
