--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -68,14 +68,14 @@
         color: rgb(61, 61, 61);
 
         >a {
+            // border: 2px solid green;
             text-decoration: none;
             color: black;
-
+            margin-left: 15px;
 
             >span {
                 // border: 2px solid green;
                 display: flex;
-                margin-left: 15px;
 
             }
 
