--- a/client/src/Pages/Login/login.scss
+++ b/client/src/Pages/Login/login.scss
@@ -9,7 +9,17 @@
     justify-content: space-evenly;
     align-items: center;
 
-
+    >.goToHome {
+        // border: 2px solid red;
+        position: absolute;
+        left: 2rem;
+        top: 2rem;
+        text-decoration: none;
+        color : black;
+        >span {
+            font-size: xx-large;
+        }
+    }
 
     >.heading {
         // border: 2px solid red;
