--- a/client/src/Pages/userOrders/userOrder.scss
+++ b/client/src/Pages/userOrders/userOrder.scss
@@ -8,24 +8,18 @@
         border: 1px solid gray;
         padding: 1rem;
         display: flex;
-        align-items: center;
         justify-content: space-between;
-        transition: .7s all;
         height: fit-content;
         margin-bottom: 1rem;
 
 
-        &:hover {
-            box-shadow: 0px 0px 8px gray;
-            transform: scale(1.05);
-            transition: 1s all;
-        }
 
         >.orderDetails {
 
             display: flex;
             flex-direction: column;
             // border: 2px solid red;
+            gap: 10px;
 
             >.orderId {
                 // border: 2px solid red;
@@ -43,90 +37,217 @@
 
             }
 
-            >.product {
-                display: flex;
-                align-items: center;
-                gap: 10px;
-                // border: 2px solid red;
-                padding: 1rem 0rem;
+            >.orderProduct {
 
-
-                >.orderImage {
-                    // border: 2px solid blue;
-                    width: 10rem;
-                    height: 10rem;
+                >.product {
                     display: flex;
                     align-items: center;
-                    justify-content: center;
+                    gap: 10px;
+                    padding: .5rem 1rem .5rem 1rem;
                     border: 1px solid gray;
+                    // border: 2px solid red;
 
-                    >img {
-                        max-width: 100%;
-                        max-height: 100%;
 
-                    }
-                }
 
-                >.productDetails {
-                    // border: 2px solid green;
-                    // height: 14rem;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
+                    >.orderImage {
+                        // border: 2px solid blue;
+                        width: 10rem;
+                        height: 10rem;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        border: 1px solid gray;
 
-                    // gap: 10px;
+                        >img {
+                            max-width: 100%;
+                            max-height: 100%;
 
-                    >h2 {
-                        color: orangered;
-                    }
-
-                    >p {
-                        // border: 2px solid red;
-                        width: 20rem;
-                        height: 2.8rem;
-                        overflow: hidden;
-                        font-size: small;
-                        color: gray;
+                        }
                     }
 
-                    >.orderAmount {
+                    >.productDetails {
+                        // border: 2px solid green;
+                        // height: 14rem;
+                        display: flex;
+                        gap: 5px;
+                        flex-direction: column;
+                        justify-content: center;
 
-                        >table {
-                            >tbody {
-                                >tr {
-                                    >td {
-                                        // border: 2px solid green;
+                        >h2 {
+                            color: orangered;
+                        }
 
-                                        >span {
-                                            color: gray;
-                                            font-size: small;
+                        >p {
+                            // border: 2px solid red;
+                            width: 19rem;
+                            height: 2.8rem;
+                            overflow: hidden;
+                            font-size: small;
+                            color: gray;
+                        }
+
+                        >.orderAmount {
+
+                            >table {
+
+                                border-collapse: collapse;
+
+                                >tbody {
+                                    >tr {
+                                        >td {
+                                            // border: 2px solid green;
+
+                                            text-align: right;
+
+                                            >span {
+                                                color: gray;
+                                                font-size: small;
+                                                padding: .5rem .5rem;
+
+                                            }
+
+                                            &:nth-child(1) {
+                                                text-align: left;
+
+                                                >span {
+                                                    color: black;
+                                                    font-weight: bold;
+                                                }
+                                            }
+
+                                            >h2 {
+                                                color: white;
+                                                padding: .3rem .5rem;
+                                            }
                                         }
 
-                                        &:nth-child(1) {
-                                            >span {
-                                                color: black;
-                                                font-weight: bold;
 
+
+                                        &:nth-child(3) {
+                                            background-color: orangered;
+                                            // border: 2px solid red;
+
+
+                                            >td {
+                                                width: 100%;
+                                            }
+
+                                        }
+
+
+                                    }
+
+                                }
+                            }
+                        }
+                    }
+
+                }
+
+            }
+
+            >.orderProducts {
+                // border: 2px solid red;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                gap: 1rem;
+
+
+                >.product {
+                    border: 2px solid green;
+                    border: 1px solid gray;
+
+                    display: grid;
+                    gap: 10px;
+                    padding: .5rem .5rem;
+
+
+                    >.orderImage {
+                        // border: 2px solid blue;
+                        margin: auto;
+                        width: 14rem;
+                        height: 5rem;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        border: 1px solid gray;
+
+                        >img {
+                            max-width: 100%;
+                            max-height: 100%;
+
+                        }
+                    }
+
+                    >.productDetails {
+                        // border: 2px solid green;
+                        // height: 14rem;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+
+                        // gap: 10px;
+
+                        >p {
+                            // border: 2px solid red;
+                            width: 14rem;
+                            height: 2.8rem;
+                            overflow: hidden;
+                            font-size: x-small;
+                            color: gray;
+                        }
+
+                        >.orderAmount {
+                            display: flex;
+                            align-items: end;
+                            // gap: 10px;
+                            justify-content: space-between;
+                            // border: 2px solid red;
+
+                            >div {
+                                >h3 {
+                                    color: orangered;
+                                }
+                            }
+
+                            >table {
+
+                                border-right: 1px solid gray;
+                                padding-right: 1rem;
+
+
+                                >tbody {
+
+                                    >tr {
+                                        >td {
+
+                                            >span {
+                                                color: gray;
+                                                font-size: small;
+                                            }
+
+                                            &:nth-child(1) {
+                                                >span {
+                                                    color: black;
+                                                    font-weight: bold;
+                                                }
                                             }
                                         }
                                     }
 
-                                    >td {
-                                        >h2 {
-                                            color: orangered;
-
-                                        }
-                                    }
-
-
                                 }
-
                             }
                         }
+
                     }
                 }
 
+
             }
+
+
+
+
         }
 
 
@@ -135,14 +256,21 @@
             font-family: 'Reem Kufi', sans-serif;
             border-right: 2px solid orangered;
             margin-right: 1rem;
-
-            >h4 {
-                color: gray;
-            }
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: left;
 
             >table {
+
                 // border: 2px solid red;
-                height: fit-content;
+                height: 85%;
+
+                >h4 {
+                    color: gray;
+                }
+
+
 
                 >tbody {
 
@@ -153,7 +281,7 @@
                                 font-weight: bold;
                                 display: flex;
                                 padding: .2rem;
-                                //border: 2px solid red;
+                                // border: 2px solid red;
                             }
 
                         }
@@ -173,12 +301,26 @@
 
                     &>tr:nth-child(4) {
                         >td {
+                            // border: 2px solid red;
+
+                            &:nth-child(1) {
+                                // border: 2px solid red;
+                                position: relative;
+
+                                >span {
+                                    // border: 2px solid green;
+                                    position: absolute;
+                                    top: 0px;
+                                }
+
+
+                            }
 
                             &:nth-child(2) {
                                 // color: red;
                                 // border: 2px solid red;
                                 display: flex;
-                                max-height: 4.5rem;
+                                max-height: 4.2rem;
                                 overflow: hidden;
                             }
 
@@ -190,11 +332,21 @@
                 }
             }
 
+
+            >.orderTotal {
+                // border: 3px solid red;
+                width: 97%;
+                font-weight: bold;
+                color: white;
+                background-color: orangered;
+                padding: .8rem 1rem;
+            }
+
         }
 
         >.orderStatus {
             // border: 2px solid green;
-            height: 14rem;
+            // height: 14rem;
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
@@ -204,9 +356,13 @@
             }
 
             >table {
+                // border: 2px solid red;
+                height: 100%;
+
                 >tbody {
                     >tr {
                         >td {
+
                             >ul {
 
                                 >li {
