--- a/client/src/Pages/DashBoard/DashBoard.scss
+++ b/client/src/Pages/DashBoard/DashBoard.scss
@@ -1,3 +1,5 @@
+@import '../../style/template';
+
 .deshBoard {
     // border: 2px solid green;
     display: flex;
@@ -5,60 +7,98 @@
     height: 100vh;
 
 
+
     >.left {
         // border: 2px solid red;
-        width: 20%;
+        width: 17%;
         font-family: 'Open Sans', sans-serif;
+        // font-weight: bold;
+        color: white;
         box-shadow: -3px 0px 8px gray;
+        background-color: $theme;
 
-        // overflow: hidden;
+        overflow: scroll;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
 
         >h1 {
             font-weight: bold;
             font-family: 'Reem Kufi', sans-serif;
             // border: 2px solid red;
             background-color: rgba(128, 128, 128, 0.11);
-            box-shadow: -3px 0px 8px gray;
+            // box-shadow: -3px 0px 8px gray;
             padding: .5rem 1rem;
-            color: blueviolet;
+            color: white;
+
 
         }
 
         >div {
 
-            // border: 2px solid red;
-
             // box-shadow: 0px 10px 8px gray;
 
             >div {
                 // border: 2px solid green;
-                padding: 1rem;
+                padding: .5rem 1rem;
                 font-family: 'Roboto', sans-serif;
 
 
                 >h2 {
-                    font-size: med;
+                    font-size: large;
                     // border: 2px solid black;
-                    border-bottom: 2px solid black;
                     padding: .3rem .5rem;
                     font-weight: bolder;
                     margin-bottom: 1rem;
-
+                    // display: none;
 
                 }
 
                 >p {
-                    margin: 0rem 1.5rem;
-                    margin-top: 1.5rem;
+                    // margin: 0rem 1.5rem;
+                    // margin-top: 1.5rem;
                     border-bottom: 1px solid transparent;
                     color: black;
                     cursor: pointer;
+                    color: white;
+                    padding: .8rem 1rem;
+                    transition: .6s all;
+                    border-bottom: 4px solid rgb(16, 26, 51);
+
+                    // border: 2px solid red;
+                    display: flex;
+                    align-items: center;
+                    gap: 15px;
+                    position: relative;
+
+                    >span {
+                        // border: 2px solid red;
+                        font-size: x-large;
+                        display: flex;
+                        color: white;
+
+                        &:nth-child(2) {
+                            text-align: right;
+                            font-size: small;
+                            position: absolute;
+                            right: 13px;
+                            color: white;
+
+
+                        }
+
+
+                    }
+
 
 
                     &:hover {
-                        color: blueviolet;
                         font-weight: bolder;
-                        border-bottom: 1px solid blueviolet;
+                        background-color: rgb(29, 49, 100);
+                        transform: scale(1.1);
+                        transition: .4s all;
+
                     }
 
 
@@ -74,19 +114,21 @@
 
     .right {
         // border: 2px solid green;
-        width: 80%;
+        // width: 80%;
+        width: calc(100% - 17%);
+
         height: 100%;
         overflow: hidden;
 
         >.top {
             // border-bottom: 1px solid gray;
             font-family: 'Roboto', sans-serif;
-            background-color: rgba(128, 128, 128, 0.11);
 
             display: flex;
             justify-content: space-between;
             align-items: center;
-            box-shadow: 0px 0px 8px gray;
+            // box-shadow: 0px 0px 8px gray;
+            background-color: rgb(16, 26, 51);
 
 
 
@@ -96,20 +138,20 @@
                 font-weight: bold;
                 font-family: 'Reem Kufi', sans-serif;
                 padding: .5rem 1rem;
-                color: blueviolet;
+                color: white;
             }
 
             >button {
                 height: 2rem;
                 width: 5rem;
                 margin-right: 2rem;
-                color: blueviolet;
+                color: $theme;
                 font-weight: bold;
 
                 &:hover {
-                    background-color: blueviolet;
+                    background-color: $theme;
                     color: white;
-                    border: none;
+                    border: 2px solid white;
                     cursor: pointer;
                 }
 
@@ -118,11 +160,6 @@
 
         >.bottom {
             // border: 2px solid blue;
-
-
-
-
-
         }
     }
 }
