--- a/client/src/components/UpdateProductController/updateProductController.scss
+++ b/client/src/components/UpdateProductController/updateProductController.scss
@@ -1,3 +1,6 @@
+@import '../../style/template';
+
+
 .addProduct {
 
     >div {
@@ -23,7 +26,7 @@
             >button {
                 padding: .5rem 2rem;
                 color: white;
-                background-color: blueviolet;
+                background-color: $btnColor;
                 border: 2px solid transparent;
                 font-weight: bold;
                 cursor: pointer;
@@ -31,8 +34,8 @@
 
                 &:hover {
                     background-color: white;
-                    color: blueviolet;
-                    border: 2px solid blueviolet;
+                    color: $btnColor;
+                    border: 2px solid $btnColor;
                     transition: .3s all;
                 }
             }
