--- a/client/src/style/_template.scss
+++ b/client/src/style/_template.scss
@@ -1,5 +1,8 @@
 $fonts : 'https://fonts.googleapis.com/css2?family=Archivo:wght@600&family=Cormorant&family=Open+Sans:wght@300&family=Reem+Kufi&family=Roboto&display=swap';
 
+$theme :rgb(16, 26, 51);
+$ltheme :rgb(33, 51, 100);
+$btnColor :rgb(40, 84, 233);
 
 // font-family: 'Archivo', sans-serif;
 // font-family: 'Open Sans', sans-serif;
