--- a/client/src/components/Banner/banner.scss
+++ b/client/src/components/Banner/banner.scss
@@ -82,6 +82,8 @@
                     height: 2.5rem;
                     font-family: 'roboto';
                     margin-top: 3rem;
+                    cursor: pointer;
+
 
 
                     &:hover {
