--- a/client/src/Pages/ProductDetails/productDetails.scss
+++ b/client/src/Pages/ProductDetails/productDetails.scss
@@ -330,6 +330,7 @@
                 letter-spacing: 2px;
                 border: 2px solid white;
                 // border: 2px solid red;
+                cursor: pointer;
 
 
                 &:hover {
