--- a/client/src/components/ImageViewer/imageViewer.scss
+++ b/client/src/components/ImageViewer/imageViewer.scss
@@ -9,6 +9,7 @@
     justify-content: space-evenly;
     position: absolute;
     background-color: rgba(90, 90, 90, 0.881);
+    z-index: 100;
 
 
     >.closeViewer {
