--- a/client/src/components/SliderController/sliderController.scss
+++ b/client/src/components/SliderController/sliderController.scss
@@ -30,10 +30,14 @@
             place-items: center;
             box-shadow: 0px 0px 12px gray;
             border-radius: 12px;
+            display: flex;
 
             >label {
+
                 >img {
-                    width: 100%;
+                    max-width: 100%;
+                    max-height: 100%;
+
                 }
             }
 
@@ -59,7 +63,7 @@
                     height: 2rem;
                     font-family: 'roboto';
                     font-weight: bold;
-                    background-color:$btnColor;
+                    background-color: $btnColor;
                     color: white;
                     cursor: pointer;
                     border: none;
@@ -70,7 +74,7 @@
 
                     &:hover {
                         border: 2px solid$btnColor;
-                        color:$btnColor;
+                        color: $btnColor;
                         background-color: transparent;
                         transition: .4s all;
                     }
