Complete Website Responsive Design

--- a/client/src/Pages/Cart/cart.scss
+++ b/client/src/Pages/Cart/cart.scss
@@ -259,3 +259,15 @@
 
 
 }
+
+
+
+@media (max-width : 786px) {
+
+    .cartWindow {
+        >.right {
+            width: 100%;
+        }
+    }
+
+}
