--- a/client/src/components/NewArrivals/newArrivals.scss
+++ b/client/src/components/NewArrivals/newArrivals.scss
@@ -119,3 +119,13 @@
 
 
 }
+
+
+@media (max-width : 786px) {
+    .newArrivalsBar {
+        >.arrivalsProducts {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+}
