--- a/client/src/Pages/DashBoard/DashBoard.scss
+++ b/client/src/Pages/DashBoard/DashBoard.scss
@@ -1,5 +1,10 @@
 @import '../../style/template';
 
+
+.notSupportDeviceAlert {
+    display: none;
+}
+
 .deshBoard {
     // border: 2px solid green;
     display: flex;
@@ -161,5 +166,33 @@
         >.bottom {
             // border: 2px solid blue;
         }
+    }
+}
+
+
+
+@media (max-width : 1030px) {
+    .notSupportDeviceAlert {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        background-color: rgb(31, 17, 43);
+        color: white;
+        font-size: x-large;
+        padding: 2rem;
+        text-align: center;
+        gap: 2rem;
+
+        >p {
+            font-size: large;
+        }
+
+    }
+
+    .deshBoard {
+        display: none;
+
     }
 }
