--- a/client/src/Pages/Login/login.scss
+++ b/client/src/Pages/Login/login.scss
@@ -15,7 +15,8 @@
         left: 2rem;
         top: 2rem;
         text-decoration: none;
-        color : black;
+        color: black;
+
         >span {
             font-size: xx-large;
         }
@@ -150,4 +151,16 @@
         }
 
     }
+}
+
+
+
+@media (max-width : 796px) {
+
+    .loginPage {
+        // border: 2px solid red;
+        width: 100%;
+    }
+
+
 }
