--- a/client/src/Pages/Products/Products.scss
+++ b/client/src/Pages/Products/Products.scss
@@ -12,6 +12,7 @@
     >.left {
         // border: 2px solid green;
         width: 25%;
+        display: block;
         // background-color: rgba(208, 208, 208, 0.24);
 
         >.header {
@@ -21,6 +22,14 @@
             font-weight: bold;
             padding: .5rem;
             border-right: 1px solid gray;
+
+
+            >p {
+                >span {
+                    display: none;
+                }
+            }
+
         }
 
         >.productList {
@@ -31,7 +40,6 @@
             border-right: 1px solid gray;
 
             >dl {
-                color: gray;
                 font-family: 'Open Sans', sans-serif;
                 font-weight: 600;
                 font-size: small;
@@ -47,18 +55,27 @@
 
                 >dd {
                     // display: none;
-                    padding: .3rem 1rem;
-                    transition: .2s all;
-                    cursor: pointer;
 
-                    &:hover {
+                    padding: .3rem 1rem;
+
+                    >a {
+                        text-decoration: none;
+                        cursor: pointer;
                         color: black;
-                        font-size: medium;
-                        transform: scaleY(1.1);
+                        color: gray;
                         transition: .2s all;
 
 
+                        &:hover {
+                            color: black;
+                            font-size: medium;
+                            transform: scaleY(1.1);
+                            transition: .2s all;
+
+                        }
                     }
+
+
                 }
 
                 >dl {
@@ -102,7 +119,6 @@
 
 
         >.header {
-            // border: 2px solid green;
             font-family: 'roboto';
             font-weight: bolder;
             font-size: 2rem;
@@ -110,7 +126,15 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+
             // box-shadow: 0px 2px 2px rgba(128, 128, 128, 0.384);
+            >p {
+                display: flex;
+
+                >span {
+                    display: none;
+                }
+            }
 
             >form {
                 // border: 2px solid green;
@@ -237,6 +261,18 @@
 
                 }
 
+
+                >.productShortDescription {
+
+                    >p {
+                        text-decoration: none;
+                        color: gray;
+                        font-size: small;
+                        font-family: 'roboto';
+
+                    }
+                }
+
                 &:hover {
                     transform: scale(1.05);
                     box-shadow: 0px 0px 8px rgb(106, 106, 106);
@@ -258,6 +294,69 @@
 
         }
 
+
+    }
+}
+
+
+@media (max-width : 786px) {
+
+    .ProductPage {
+        width: 100%;
+
+        >.left {
+            display: block;
+            position: absolute;
+            left: 0;
+            background-color: white;
+            height: 100vh;
+            width: 35%;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.75);
+            clip-path: inset(0 -15px 0 0);
+            padding-left: 1.5rem;
+
+
+            >.header {
+
+                >p {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+
+                    >span {
+                        display: flex;
+                        padding-right: 1rem;
+                        cursor: pointer;
+                        transition: .3s all;
+
+                        &:hover {
+                            transform: scale(1.2);
+                            transition: .3s all;
+                        }
+
+                    }
+
+                }
+            }
+        }
+
+        >.right {
+            width: 90%;
+
+            >.header {
+
+                >p {
+                    display: flex;
+                    align-items: center;
+                    gap: 1rem;
+
+                    >span {
+                        display: flex;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
 
     }
 }
