--- a/client/src/Pages/WishList/wishList.scss
+++ b/client/src/Pages/WishList/wishList.scss
@@ -163,3 +163,30 @@
 
 
 }
+
+
+
+@media (max-width : 786px) {
+
+    .wishList {
+        width: 95%;
+        padding: 0;
+
+        >.itemsList {
+
+            >.listItem {
+                width: 100%;
+                gap: 1rem;
+
+                &:hover{
+                    transform: none;
+                }
+            }
+
+        }
+
+    }
+
+
+
+}
