--- a/client/src/components/Banner/banner.scss
+++ b/client/src/components/Banner/banner.scss
@@ -76,13 +76,15 @@
                     margin-bottom: 3rem;
                 }
 
-                >span {
+                >a {
                     border: 2px solid white;
                     padding: .7rem 2rem;
                     height: 2.5rem;
                     font-family: 'roboto';
                     margin-top: 3rem;
                     cursor: pointer;
+                    text-decoration: none;
+                    color: white;
 
 
 
@@ -96,7 +98,37 @@
 
         }
     }
+}
 
 
+@media (max-width : 786px) {
+    .bannerWindow {
 
+        .bannerLine {
+            >div {
+                >img {
+                    width: 20%;
+                }
+
+                >p {
+                    font-size: x-small;
+                }
+
+            }
+        }
+
+        >.bannerAdds {
+            height: fit-content;
+            flex-direction: column;
+            gap: 2rem;
+            margin-bottom: 3rem;
+
+            >.bannerAdd {
+                width: 100%;
+            }
+
+
+        }
+
+    }
 }
