--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -67,6 +67,8 @@
         justify-content: flex-end;
         color: rgb(61, 61, 61);
 
+
+
         >a {
             // border: 2px solid green;
             text-decoration: none;
@@ -89,4 +91,29 @@
 
 
     }
+}
+
+
+
+.shoppingIcon {
+    display: none;
+}
+
+@media (max-width:786px) {
+
+    .menu {
+        display: none;
+    }
+
+    .headerBar {
+        justify-content: space-between;
+    }
+
+    .shoppingIcon {
+        // border: 2px solid red;
+        display: flex;
+    }
+
+
+
 }
