--- a/client/src/components/Slider/slider.scss
+++ b/client/src/components/Slider/slider.scss
@@ -106,3 +106,25 @@
         transition: transform 2s;
     }
 }
+
+
+@media (max-width :786px) {
+    .slider {
+        // border: 2px solid red;
+        background-size: cover;
+        height: 40vh;
+        background-repeat: no-repeat;
+
+        >.sliderContetn {
+            display: none;
+            // border: 2px solid red;
+        }
+
+        >.rightSlider {
+            position: relative;
+            left: -24vw;
+            overflow: hidden;
+        }
+
+    }
+}
