--- a/client/src/components/UserProfile/userProfile.scss
+++ b/client/src/components/UserProfile/userProfile.scss
@@ -54,3 +54,20 @@
     }
 
 }
+
+
+
+
+@media (max-width : 786px) {
+
+    .userInfo {
+        margin: 0;
+        margin-top: 7rem;
+
+        >.userDetails {
+            width: 100%;
+        }
+
+    }
+
+}
